--- a/Dockerfile-Ubuntu-22.04
+++ b/Dockerfile-Ubuntu-22.04
@@ -7,10 +7,10 @@ FROM ubuntu:22.04
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt update
 RUN apt install -y gawk wget git-core diffstat unzip texinfo \
-    gcc-multilib build-essential chrpath socat cpio python python3 \
+    gcc-multilib build-essential chrpath socat cpio python-is-python3 python3 \
     python3-pip python3-pexpect xz-utils debianutils iputils-ping \
     libsdl1.2-dev xterm tar locales net-tools rsync sudo vim curl zstd \
-    liblz4-tool libssl-dev bc lzop libgnutls28-dev efitools git-lfs
+    liblz4-tool libssl-dev bc lzop libgnutls28-dev efitools git-lfs file
 
 # Set up locales
 RUN locale-gen en_US.UTF-8 && \
@@ -23,7 +23,8 @@ ENV LC_ALL en_US.UTF-8
 RUN rm /bin/sh && ln -s bash /bin/sh
 
 # Install repo
-ADD https://storage.googleapis.com/git-repo-downloads/repo /usr/local/bin/
+#ADD https://storage.googleapis.com/git-repo-downloads/repo /usr/local/bin/
+RUN curl https://storage.googleapis.com/git-repo-downloads/repo > /usr/local/bin/repo
 RUN chmod 755 /usr/local/bin/repo
 
 # Add your user to sudoers to be able to install other packages in the container.
